# rag4p-knowledge-splitter

./: .gitignore  pyproject.toml  show_splitter.ipynb
